sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2: error: not found: value bubbleSort2
		bubbleSort2();
                ^AlgBubbleSort2:2: error: not found: value ddef
ddef bubbleSort2()  {
^AlgBubbleSort2:2: error: Unit does not take parameters
ddef bubbleSort2()  {
                    ^